<resources>
    <string name="app_name">SecureMe</string>

    <string name="hello_world" translatable="false">Ceci est un test</string>
    <string name="action_settings">Paramètres</string>
    <string name="title_activity_alarm" translatable="false">AlarmActivity</string>


    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="hello_settings_fragment" translatable="false">settings</string>
    <string name="hello_alert_fragment" translatable="false">alert</string>
    <string name="hello_contact_fragment" translatable="false">contact</string>
    <string name="pref_emer_contact">Contact de secours</string>
    <string name="pref_summary_emer_num">Numéro de téléphone du contact d\'urgence</string>
    <string name="pref_title_emer_num">Numéro</string>
    <string name="pref_summary_emer_text">Texte à envoyer au contact d\'urgence</string>
    <string name="pref_title_emer_text">Texte</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>
    <string name="eighteen" translatable="false">18</string>
    <string name="pref_summary_code_text">Code de déverrouillage</string>
    <string name="pref_title_code_text">Code de déverrouillage</string>
    <string name="pref_unlock_contact">Déverrouillage</string>
    <string name="confirm_text">Valider</string>
    <string name="confirm_code_text">Confirmer code</string>
    <string name="enter_code">Entrer votre code</string>
    <string name="ok">VALIDER</string>
    <string name="define_code_text">Definir code de sécurité</string>
    <string name="define">Definir</string>
    <string name="title_activity_splash_screen" translatable="false">SplashScreenActivity</string>
    <string name="input_old_text">Renseigner votre ancien code</string>
    <string name="input_confirm_code">Confirmer le nouveau code</string>
    <string name="input_new_code">Saisir votre nouveau code</string>
    <string name="default_non_value_code" translatable="false">NULL</string>
    <string name="welcome">Bienvenue !</string>
    <string name="enter_new_code_message">Pour utiliser l\'application, vous devez rentrer un code de sécurité</string>
    <string name="OK" translatable="false">Ok</string>
    <string name="key_pref_app_code" translatable="false">pref_app_code</string>
    <string name="code_changed_title">Code changé</string>
    <string name="code_changed_message">Votre nouveau code est enregistré</string>
    <string name="error_title">Erreur</string>
    <string name="error_not_same_code_message">Les deux codes ne correspondent pas</string>
    <string name="try_again_message">Recommencer</string>
    <string name="cancel_text">Annuler</string>
    <string name="zero" translatable="false">0</string>
    <string name="trigger_states_title">Modes de déclenchement</string>
    <string name="emergency_contacts_title">Contacts d\'urgence</string>
    <string name="send_device_coordinates_text">Envoyer les coordonnées GPS de l\'appareil</string>
    <string name="triggered_alarm_text">Texte provoquant l\'alerte</string>
    <string name="contact_number_text">Numéro du contact</string>
    <string name="contact_list_empty_text">Votre liste de contact est vide</string>
    <string name="contact_list_purpose_text">En cas de perte ou de vol, ces contacts pourront verrouiller votre
        téléphone à distance
    </string>
    <string name="add_text">Ajouter</string>
    <string name="edit_text">Editer</string>
    <string name="an_emergency_contact_text">" un contact d'urgence"</string>
    <string name="mouvement">Mouvement</string>
    <string name="sim">Détection de Sim</string>
    <string name="distance">Détection de distance</string>
    <string name="cable">Débranchement du cable</string>
    <string name="simdesc">Déclenche l\'alarme si la carte sim a été enlevée ou changée</string>
    <string name="timersetter">Régler le temps avant l\'activation du mode</string>
    <string name="activermode">Activer le mode</string>
    <string name="mvtdesc">Déclence l\'alarme si le téléphone est déplacé après un temps défini</string>
    <string name="distdesc">Déclence l\'alarme si le téléphone s\'éloigne d\'une distance définie de la position initiale</string>
    <string name="cabledesc">Déclence l\'alarme quand le cable du téléphone est débranché</string>
    <string name="time_mvt">Temps avant activation</string>
    <string name="time_alarm_trigger">Déclenchement alarme sonore</string>
    <string name="pref_alarm">Alarme</string>
    <string name="pref_summary_time_alarm">Temps de déclenchement de l\'alarme sonore</string>
    <string name="pref_title_time_alarm">Déclenchement alarme sonore</string>
    <string name="unit_sec">seconde</string>
    <string name="unit_sec_plu">secondes</string>
    <string name="req_dist">Distance requise pour le déclenchement de l\'alarme</string>
    <string name="loc_detection">Détection de la localisation</string>
    <string name="loc_found">Localisation déterminée</string>
    <string name="clear_text">effacer</string>
    <string name="code_changed">Code changé</string>
    <string name="code_changed_text">Votre nouveau code est enregistré</string>
    <string name="error">Erreur</string>
    <string name="wrong_code">Mauvais code !</string>
    <string name="close_text">fermer</string>
</resources>
