<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
        >

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp" android:weightSum="12" android:layout_marginTop="20dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:id="@+id/code_tv" android:layout_gravity="center_horizontal" android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" android:textAlignment="center"
                android:longClickable="true" android:textSize="40dp" android:layout_weight="9"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:layout_weight="1">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
                android:layout_weight="1">
            <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/one"
                    android:id="@+id/button1" android:background="@drawable/card_button_background"
                    android:layout_marginRight="5dp" android:textSize="40dp" android:layout_weight="1"/>
            <Button android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/two"
                    android:id="@+id/button2" android:background="@drawable/card_button_background"
                    android:textSize="40dp" android:layout_weight="1"/>
            <Button android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/three"
                    android:id="@+id/button3" android:background="@drawable/card_button_background"
                    android:layout_marginLeft="5dp" android:textSize="40dp" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
                android:layout_weight="1">
            <Button android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/four"
                    android:id="@+id/button4" android:background="@drawable/card_button_background"
                    android:layout_marginRight="5dp" android:textSize="40dp" android:layout_weight="1"/>
            <Button android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/five"
                    android:id="@+id/button5" android:background="@drawable/card_button_background"
                    android:textSize="40dp" android:layout_weight="1"/>
            <Button android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/six"
                    android:id="@+id/button6" android:background="@drawable/card_button_background"
                    android:layout_marginLeft="5dp" android:textSize="40dp" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
                android:layout_weight="1">
            <Button android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/seven"
                    android:id="@+id/button7" android:background="@drawable/card_button_background"
                    android:layout_marginRight="5dp" android:textSize="40dp" android:layout_weight="1"/>
            <Button android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/eight"
                    android:id="@+id/button8" android:background="@drawable/card_button_background"
                    android:textSize="40dp" android:layout_weight="1"/>
            <Button android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/nine"
                    android:id="@+id/button9" android:background="@drawable/card_button_background"
                    android:layout_marginLeft="5dp" android:textSize="40dp" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
                android:layout_weight="1">
            <Button android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/zero"
                    android:id="@+id/button0" android:background="@drawable/card_button_background"
                    android:textSize="40dp" android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:gravity="right"
            android:paddingTop="8dp" android:paddingBottom="8dp" android:layout_marginLeft="24dp">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent" android:layout_gravity="left" android:gravity="left">
            <Button style="?android:attr/borderlessButtonStyle" android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:text="EFFACER" android:id="@+id/clear_button"
                    android:layout_gravity="right" android:layout_marginRight="8dp"
                    android:textColor="@color/colorAccent"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:layout_gravity="right" android:gravity="right">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Annuler"
                    android:id="@+id/negative_button" android:layout_gravity="right"
                    android:layout_marginRight="8dp" style="?android:attr/borderlessButtonStyle"
                    android:textColor="@color/colorAccent"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Definir"
                    android:id="@+id/positive_button"
                    android:layout_gravity="right"
                    android:layout_marginRight="8dp" style="?android:attr/borderlessButtonStyle"
                    android:textColor="@color/colorAccent"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>